rating shift fix

--- a/src/sass/layout/_film-cards.scss
+++ b/src/sass/layout/_film-cards.scss
@@ -89,19 +89,17 @@
     background-color: $secondary-text-color;
   }
 }
+.movie-link {
+  position: relative;
+  cursor: pointer;
+}
 .movie-rating-wrapper {
   position: absolute;
   z-index: 1;
   top: 10px;
-  left: 225px;
+  right: 10px;
   width: 50px;
   height: 25px;
-  @media screen and (min-width: 768px) {
-    left: 240px;
-  }
-  @media screen and(min-width: 1024px) {
-    left: 220px;
-  }
   background-color: rgba(255, 107, 8, 0.9);
   color: #fff;
   display: flex;
@@ -110,10 +108,6 @@
   clip-path: polygon(100% 0%, 90% 50%, 100% 100%, 25% 100%, 10% 50%, 25% 0%);
 }
 
-.movie-link {
-  position: relative;
-  cursor: pointer;
-}
 .open-title {
   cursor: pointer;
   box-shadow: -13px -1px 5px 4px rgb(255, 255, 255, 76%);
